Worked on font size for all break points. Fixed text alignment.

--- a/css/index.css
+++ b/css/index.css
@@ -139,11 +139,12 @@ body {
   margin: 1%;
   padding: 0.5% 1%;
 }
-h1 {
-  font-size: 4rem;
-}
 .top-section {
   text-align: center;
+}
+.top-section h1 {
+  font-size: 3.4rem;
+  padding-bottom: 8%;
 }
 @media (min-width: 500px) {
   .top-section h1 {
@@ -158,7 +159,7 @@ h1 {
 .navbar {
   margin-top: 1%;
   margin-bottom: 5%;
-  font-size: 1.6rem;
+  font-size: 2.4rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -170,7 +171,7 @@ h1 {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: auto;
-    font-size: 1.6rem;
+    font-size: 3.2rem;
   }
 }
 @media (min-width: 1000px) {
@@ -196,6 +197,22 @@ h1 {
 }
 .navbar a:hover {
   color: #3b2d94;
+}
+footer {
+  padding: 10% 5%;
+  text-align: center;
+  font-size: 2.4rem;
+}
+@media (min-width: 500px) {
+  footer {
+    font-size: 3.2rem;
+  }
+}
+.main-content h3 {
+  text-align: center;
+  padding: 5% 0%;
+  font-size: 3.2rem;
+  border-top: 1px solid slategrey;
 }
 img {
   height: auto;
