--- a/less/global.less
+++ b/less/global.less
@@ -1,14 +1,11 @@
 html {
     font-size: 62.5%;
-  }
+  };
 
 body {
     background-image: url("../img/julia-child-kitchen.jpg");
     color: @font-color-light;
     .stdmargin();
-}
+};
 
-h1 {
-    font-size: 4rem;
-}
 
