--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,12 @@
 .main-content {
-
+    h3 {
+        text-align: center;
+        padding: 5% 0%;
+        font-size: @stitle-fsize-tab;
+        border-top: 1px solid slategrey;
+    };
 
 };
-
-
 
 img {
     height: auto;
