--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,8 @@
     text-align: center;
 
     h1 {
+        font-size: @title-fsize-mob;
+        padding-bottom: 8%;
     @media @tablet {
         font-size: @title-fsize-tab;
         };
