--- a/less/variables.less
+++ b/less/variables.less
@@ -3,12 +3,12 @@
 @tablet: ~"(min-width: 500px)";
 @desktop: ~"(min-width: 1000px)";
 
-@title-fsize-mob: 1.8rem;
-@stitle-fsize-mob: 1.6rem;
+@title-fsize-mob: 3.4rem;
+@stitle-fsize-mob: 2.4rem;
 @text-fsize-mob: 1.0rem;
 
 @title-fsize-tab: 4rem;
-@stitle-fsize-tab: 1.6rem;
+@stitle-fsize-tab: 3.2rem;
 @text-fsize-tab: 1.2rem;
 
 @title-fsize-des: 8rem;
